<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/add_place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/add_place_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description" />

    <EditText
        android:id="@+id/add_place_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone" />

    <EditText
        android:id="@+id/add_place_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_latitude" />

    <EditText
        android:id="@+id/add_place_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_longitude" />

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert" />

</LinearLayout>